--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,49 @@ p {
     gap:10px;
     padding: 10px 16px;
  }
+ .lang-items {
+    max-width: 120px;
+    width: 100%;
+    height: auto;
+    background-color:var(--color-light);
+    position: absolute;
+    top:70px;
+    right: 15px;
+    display: none;
+    border-radius: 5px;
+    
+}
+ .lang-item li {
+    margin: 0;
+    color: var(--bg-dark);
+    list-style: none;
+}
+.lang {
+    border-radius: 50%;
+    margin-right: 5px;
+}
+.toggle {
+    border-radius: 10px;
+    background-color: inherit;
+    border: none;
+    color:var(--color-light);
+}
+ .lang-item li:hover {
+    cursor: pointer;
+}
+ .nav .toggle {
+    text-decoration: none;
+    color:white;
+    text-transform: uppercase;
+    cursor: pointer;
+    margin-right: 10px;
+}
+ li.toggle {
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 16px;
+}
  .btn-miss {
     align-items: center;
     background: #5D7CE8;
@@ -199,6 +242,7 @@ p {
 .mob-logo {
     display: none;
 }
+
 @media screen and (max-width: 768px){
     .btn-miss  {
         display: none;
@@ -217,7 +261,7 @@ p {
         justify-content: flex-end;
     }
 }
-@media screen and (max-width: 423px){
+@media screen and (max-width: 500px){
     .btn-log {
         border-radius: 10px;
         display: flex;
