--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,9 @@ p {
         width: 20px;
         height: 20px;
     }
+    .toggle {
+        font-size: 10px;
+    }
 }
 @media screen and (max-width: 500px){
     .btn-log {
