--- a/css/style.css
+++ b/css/style.css
@@ -153,23 +153,35 @@ p {
     padding: 10px 16px;
  }
  .lang-items {
-    max-width: 120px;
+    max-width: 135px;
     width: 100%;
     height: auto;
-    background-color:var(--color-light);
+    background-color:var(--bg-dark);
+    border: 1px solid var(--color-light);
+    filter: brightness(140%);
     position: absolute;
     top:70px;
     right: 15px;
     display: none;
     border-radius: 5px;
+
     
 }
  .lang-item li {
-    margin: 0;
+    margin: 7px 0;
     color: var(--bg-dark);
     list-style: none;
+    
+}
+.lang-item li a {
+    color: var(--color-light);
+    font-size: 12px;
 }
 .lang {
+    border-radius: 50%;
+    margin-right: 5px;
+}
+.lang-i {
     border-radius: 50%;
     margin-right: 5px;
 }
